<resources>
    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="labelName">Nome</string>
    <string name="labelPhone">Telefone</string>
    <string name="labelEmail">Email</string>
    <string name="labelAdress">Endereço</string>
    <string name="labelDates">Datas especiais</string>
    <string name="labelGroups">Grupos</string>
</resources>
